--- a/html/index.html
+++ b/html/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-    <link href="css/style.css" rel="stylesheet">
+    <title>Chris Toppin Bootstrap</title>
+    <link href="../assets/css/style.css" rel="stylesheet">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,15 +19,17 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello, world!</h1>
-
+      <h1>Chris Toppin. It's Lit!</h1>
       <div class="row">
-        <div class="col-6 col-md-2">The</div>
-        <div class="col-6 col-md-2">Brown</div>
-        <div class="col-6 col-md-2">Fox</div>
-        <div class="col-6 col-md-2">Jumped</div>
-        <div class="col-6 col-md-2">Over</div>
-        <div class="col-6 col-md-2">A Fense</div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
+          <img class="img_size" src= "../assets/images/rachel-ragucci-animal-abuse-awareness-poster.jpg" alt="Image showing poster of a dog.">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
+          <img class="img_size" src= "../assets/images/rachel-ragucci-contagion-movie-poster.jpg" alt="Image showing poster of a doctor.">
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
+          <img class="img_size" src= "../assets/images/rachel-ragucci-animal-abuse-awareness-poster.jpg" alt="Image showing poster of a dog.">
+        </div>
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
